prevent add new comment box overflowing on small screens

--- a/src/css/Comments.css
+++ b/src/css/Comments.css
@@ -56,6 +56,7 @@
     border:3px solid rgb(134, 111, 111);
     margin:5px;
     width:480px;
+    max-width: 90vw;
 }
 
 #newCommentTextArea {
